--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/OviedoF/alura-portfolio.git",
+  "homepage": "https:/OviedoF.github.io/alura-portfolio",
   "name": "alura-portfolio",
   "version": "0.1.0",
   "private": true,
